Added Harmburger Menu Functionality

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
 
 <body>
     <div class="nav">
-        <div class="title"><a href="https://darrylmathias.github.io/Portfolio/">ByteGuide</a>
+        <div class="logonav">
+            <div class="hamburger-logo" onclick="hamburger()"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50">
+                <path d="M 0 7.5 L 0 12.5 L 50 12.5 L 50 7.5 Z M 0 22.5 L 0 27.5 L 50 27.5 L 50 22.5 Z M 0 37.5 L 0 42.5 L 50 42.5 L 50 37.5 Z"></path>
+                </svg></div>
+            <div class="title"><a href="https://darrylmathias.github.io/Portfolio/">ByteGuide</a>
+            </div>
         </div>
-        <div class="nav-child">Home <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+        <div class="innernav">
+            <div class="nav-child">Home <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-chevron-down" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
                     d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
@@ -56,6 +62,7 @@
                 <path fill-rule="evenodd"
                     d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
             </svg>
+        </div>
         </div>
     </div>
     <main>
@@ -248,6 +255,7 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
