--- a/public/recipe.html
+++ b/public/recipe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./recipe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -196,8 +196,8 @@
             </div>
         </div>
     </footer>
-    <script src="/script.js"></script>
-    <script src="../Recipes/recipe.js"></script>
+    <script src="../script.js"></script>
+    <script src="./recipe.js"></script>
 </body>
 
 </html>
