Fixed minor navbar issue

--- a/public/recipe.html
+++ b/public/recipe.html
@@ -24,12 +24,12 @@
             </div>
         </div>
         <div class="innernav">
-            <div class="nav-child"><a href="/index.html">Home</a></div>
-        <div class="nav-child"><a href="/index.html#recipes">Recipes</a>
+            <div class="nav-child"><a href="https://darrylmathias.github.io/ByteGuide/index.html">Home</a></div>
+        <div class="nav-child"><a href="https://darrylmathias.github.io/ByteGuide/index.html#recipes">Recipes</a>
         </div>
-        <div class="nav-child"><a href="/index.html#features">Features</a>
+        <div class="nav-child"><a href="https://darrylmathias.github.io/ByteGuide/index.html#features">Features</a>
         </div>
-        <div class="nav-child"><a href="/index.html#categories">Categories</a>
+        <div class="nav-child"><a href="https://darrylmathias.github.io/ByteGuide/index.html#categories">Categories</a>
         </div>
         </div>
         <div class="theme-switch" onclick="darkMode()">
